# bitbattle

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
bitbattle-backend/: .env.example  Cargo.toml  Dockerfile
bitbattle-backend/migrations/: 20241228_001_init.sql  20241228_002_elo_rating.sql  20241229_002_refresh_tokens.sql  20250101_004_ai_problems.sql
bitbattle-backend/sandbox/: Dockerfile
bitbattle-backend/src/: config.rs  db.rs  error.rs  executor.rs  main.rs  matchmaking.rs  middleware.rs  problems.rs  rate_limit.rs  spectate.rs  validation.rs
bitbattle-backend/src/ai_problems/: generator.rs  mod.rs  models.rs  prompts.rs  validator.rs
bitbattle-backend/src/auth/: jwt.rs  middleware.rs  mod.rs
bitbattle-backend/src/handlers/: auth.rs  leaderboard.rs  mod.rs  user.rs
bitbattle-backend/src/llm/: mod.rs  openai.rs  traits.rs
bitbattle-backend/src/models/: game_result.rs  mod.rs  refresh_token.rs  user.rs
bitbattle-backend/tests/: api_tests.rs
bitbattle-frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
bitbattle-frontend/e2e/: home.spec.ts
bitbattle-frontend/src/: App.tsx  index.css
bitbattle-frontend/src/components/: CodeMirrorEditor.tsx  CollaborativeEditor.tsx  ErrorBoundary.tsx  Footer.tsx  GameOverScreen.tsx  GoogleLoginButton.tsx  Leaderboard.tsx  LiveGames.tsx  Logo.test.tsx  Logo.tsx  MatchmakingQueue.tsx  NavBar.tsx  ProblemPanel.tsx  Profile.tsx  RoomLobby.test.tsx  RoomLobby.tsx  Skeleton.tsx  SpectatorView.tsx  UsernameModal.tsx
bitbattle-frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
bitbattle-frontend/src/hooks/: useWebSocket.ts
bitbattle-frontend/src/styles/: tokens.ts
bitbattle-frontend/src/test/: setup.ts
bitbattle-frontend/src/types/: auth.ts  error.ts
bitbattle-frontend/src/utils/: api.ts  clipboard.ts  matchmaking.ts  roomUtils.test.ts  roomUtils.ts
