[package]
name = "bitbattle-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fastrand = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
bollard = "0.18"
tar = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Authentication
oauth2 = "4.4"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
dotenvy = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
