[package]
name = "bitbattle-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
fastrand = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
bollard = "0.18"
tar = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Authentication
oauth2 = "4.4"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
dotenvy = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
slug = "0.1"

# Rate limiting
tower_governor = "0.4"
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
